<resources>
    <string name="app_name">Plantain</string>
    <string name="main_tag_found">Карта «Подорожник» обнаружена</string>
    <string name="main_write_data">Записать данные</string>
    <string name="main_scan_tag_title">Отсканируйте карту</string>
    <string name="main_scan_tag_description">Приложите бесконтактную карту с задней стороны телефона, чтобы приложение могло считать данные</string>
    <string name="main_log_hint">Лог:</string>
    <string name="main_write_success">Запись: успешно</string>
    <string name="main_write_failure">Запись: ошибка</string>
    <string name="main_read_success">Чтение: успешно</string>
    <string name="main_read_failure">Чтение: ошибка</string>
    <string name="settings_theme">Темная тема</string>
    <string name="settings_theme_description">Переключите, чтобы использовать темную тему приложения</string>
    <string name="main_tag_balance">Баланс: %d ₽</string>
    <string name="main_tag_uid">UID: %s</string>
    <string name="main_tag_error_read">Произошла ошибка чтения</string>
    <string name="main_tag_error_connection_lost">Соединение с картой потеряно</string>
    <string name="main_tag_error_auth">Не удалось аутентифицировать сектор ключом %s</string>
    <string name="main_tag_dumps">Сохраненные дампы</string>
    <string name="main_tag_dumps_hint">Дампы можно записывать на карту</string>
    <string name="main_tag_history">История</string>
    <string name="main_tag_history_hint">Информация о действиях с картами</string>

    <string name="detail_balance">Сумма:</string>
    <string name="detail_count">Количество:</string>
    <string name="detail_date">Дата:</string>
    <string name="detail_title_underground">Метро:</string>
    <string name="detail_title_ground">Наземка:</string>

    <string name="details_title">Подробности</string>
    <string name="details_balance">Баланс карты</string>
    <string name="details_last_payment">Последнее пополнение</string>
    <string name="details_last_use">Последнее использование</string>
    <string name="details_travel">Количество поездок</string>
    <string name="details_uid">Уникальный идентификатор (UID)</string>
    <string name="details_uid_increment">+</string>
    <string name="details_uid_decrement">−</string>
    <string name="details_rub">%d ₽</string>
    <string name="details_save_dump">Сохранить</string>
    <string name="details_save_dump_write">Сохранить</string>
    <string name="details_save_dump_ok">Дамп успешно сохранен!</string>
    <string name="details_save_dump_error">При сохранении дампа произошла ошибка. Попробуйте еще раз!</string>
    <string name="details_write_dump">Записать</string>
    <string name="details_write_dump_ok">Запись прошла успешно!</string>
    <string name="details_write_dump_error">При записи дампа произошла ошибка. Попробуйте еще раз!</string>
    <string name="details_write_dump_no_card">Приложите карту «Подорожник» с задней стороны телефона и попробуйте еще раз!</string>

    <string name="dumps_title">Сохраненные дампы</string>
    <string name="dump_balance">Баланс: %d₽</string>
    <string name="dump_uid">UID: %s</string>
    <string name="dump_last_use">Использовался: %s</string>
    <string name="dump_last_use_no">нет</string>

    <string name="edit_dump_money_0">0 ₽</string>
    <string name="edit_dump_money_0_value">0</string>
    <string name="edit_dump_money_100">100 ₽</string>
    <string name="edit_dump_money_100_value">100</string>
    <string name="edit_dump_money_500">500 ₽</string>
    <string name="edit_dump_money_500_value">500</string>
    <string name="edit_dump_money_1000">1000 ₽</string>
    <string name="edit_dump_money_1000_value">1000</string>

    <string name="edit_dump_count_0">0</string>
    <string name="edit_dump_count_10">10</string>
    <string name="edit_dump_count_20">20</string>
    <string name="edit_dump_count_50">50</string>

    <string name="edit_dump_date_initial">Сброс</string>
    <string name="edit_dump_date_initial_value">01.01.2010 00:00</string>
    <string name="edit_dump_date_today">Сегодня</string>
    <string name="edit_dump_date_yesterday">Вчера</string>
    <string name="edit_dump_date_week_ago">Неделю назад</string>

    <string name="edit_dump_placeholder_money">Введите значение в рублях</string>
    <string name="edit_dump_placeholder_count">Введите числовое значение</string>
    <string name="edit_dump_placeholder_date">Введите дату в формате: 01.01.2010 00:00</string>
    <string name="edit_dump_title_money">Сумма</string>
    <string name="edit_dump_title_count">Значение</string>
    <string name="edit_dump_title_date">Дата</string>

    <string name="validator_date">Дата должна быть между 01.01.2010 и 31.12.2041</string>
    <string name="validator_count">Значение должно быть от 0 до 255</string>
    <string name="validator_rubles">Сумма должна быть от 0 до 167 772 ₽</string>

    <string name="dumps_create_dump">Создать новый дамп</string>
    <string name="dumps_create_dump_plus">+</string>

    <string name="name_dump_title">Название дампа</string>
    <string name="name_dump_placeholder">Подорожник #%d</string>
    <string name="name_dump_helper_text">Название будет отображено в списке дампов</string>

    <string name="settings_about">О приложении</string>
    <string name="settings_title">Настройки</string>

    <string name="about_title">О приложении</string>
    <string name="about_version">Сборка %s-%d</string>
    <string name="about_app_description">
        Plantain - это Android приложение для чтения и записи информации с электронных карт Mifare Classic. Использует алгоритмы и наработки из PlantainReader и MifareClassicTool.
        \n\nРаботает с секторами 4 и 5, оттуда извлекает информацию и перезаписывает. Ключи на чтение/запись (KEY A, KEY, B) и Access Conditions не меняет.
    </string>
    <string name="about_app_author">by enxy0</string>

    <string name="history_title">История</string>
</resources>