<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground"
        app:elevation="0dp"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$Behavior">

        <kek.enxy.plantwriter.presentation.common.view.AppToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:at_endIcon="@drawable/ic_outline_settings_24"
            app:at_title="@string/app_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:overScrollMode="never"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="@dimen/margin_normal"
            android:paddingBottom="94dp">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardPlantain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardElevation="0dp"
                app:strokeColor="?dividerColor"
                app:strokeWidth="1dp"
                app:cardCornerRadius="@dimen/default_radius"
                android:layout_marginTop="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imagePlantain"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:scaleType="center"
                    app:srcCompat="@drawable/plantain_card"
                    tools:ignore="ContentDescription" />
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/textTitle"
                style="@style/Text.Header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/main_scan_tag_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cardPlantain" />

            <TextView
                android:id="@+id/textDescription"
                style="@style/Text.Secondary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/main_scan_tag_description"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textTitle" />

            <kek.enxy.plantwriter.presentation.main.scan.view.TagDetailsView
                android:id="@+id/tagDetails"
                android:layout_width="0dp"
                android:layout_height="64dp"
                android:layout_marginTop="@dimen/margin_big"
                android:visibility="gone"
                app:cardBackgroundColor="?attr/colorSurface"
                app:cardCornerRadius="@dimen/default_radius"
                app:cardElevation="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textDescription"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/textLog"
                style="@style/Text.Mono.Small"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                android:background="@drawable/bg_log"
                android:padding="@dimen/margin_normal"
                android:text="@string/main_log_hint"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tagDetails"
                tools:visibility="visible" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_write"
        style="@style/AppButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/write_button_height"
        android:layout_gravity="bottom"
        android:layout_marginHorizontal="@dimen/margin_normal"
        android:layout_marginBottom="@dimen/margin_normal"
        android:text="@string/main_write_data"
        android:visibility="gone"
        tools:visibility="visible" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>
