<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/margin_smallest"
        android:paddingBottom="32dp">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/margin_normal" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/margin_normal" />


        <ImageView
            android:id="@+id/imgSlide"
            android:layout_width="50dp"
            android:layout_height="16dp"
            android:layout_gravity="center_horizontal"
            android:scaleType="center"
            android:src="@drawable/ic_slide_down"
            app:layout_constraintEnd_toStartOf="@id/guideEnd"
            app:layout_constraintStart_toEndOf="@id/guideStart"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textTitle"
            style="@style/Text.Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:text="@string/name_dump_title"
            app:layout_constraintEnd_toStartOf="@id/guideEnd"
            app:layout_constraintStart_toEndOf="@id/guideStart"
            app:layout_constraintTop_toBottomOf="@id/imgSlide" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_normal"
            android:layout_marginTop="@dimen/margin_normal"
            android:paddingBottom="@dimen/margin_normal"
            app:endIconDrawable="@drawable/ic_baseline_close_24"
            app:endIconMode="clear_text"
            app:helperText="@string/name_dump_helper_text"
            app:helperTextEnabled="true"
            app:hintAnimationEnabled="false"
            app:hintEnabled="false"
            app:layout_constraintEnd_toStartOf="@id/guideEnd"
            app:layout_constraintStart_toEndOf="@id/guideStart"
            app:layout_constraintTop_toBottomOf="@id/textTitle"
            app:placeholderText="@string/name_dump_placeholder">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:lines="1"
                android:maxLines="1"
                android:padding="@dimen/margin_normal">

                <requestFocus />
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
